--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,3 +1,16 @@
+.link-nav {
+  display: none;
+}
+
+.header-contacts {
+  display: none;
+}
+
+.header {
+  padding-top: 17.5px;
+  padding-bottom: 17.5px;
+}
+
 .logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -10,6 +23,34 @@
   text-decoration: none;
   margin-right: 76px;
 }
+.logo-studio {
+  color: #2e2f42;
+  margin-left: -5px;
+}
+
+
+  /* menu */
+
+.mobile-menu-open-btn {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  line-height: 0;
+}
+
+.mobile-menu-open-icon {
+  fill: #2f2f37;
+}
+.header-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+
+/* 
+
 
 .nav {
   color: #2e2f42;
@@ -24,10 +65,7 @@
   gap: 40px;
 }
 
-.logo-studio {
-  color: #2e2f42;
-  margin-left: -5px;
-}
+
 
 .footer-logo {
   color: #f4f4fd;
@@ -96,14 +134,26 @@
  
 }
 
-.mobile-menu-open-btn {
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  line-height: 0;
+
+ */
+
+ /* .header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
-.mobile-menu-open-icon {
-  fill: #f4f4fd;
+.header-wrap {
+  display: flex;
+  justify-content: space-between;
 }
 
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.addres-list {
+  display: flex;
+  gap: 40px;
+} */
