--- a/css/base/container.css
+++ b/css/base/container.css
@@ -1,9 +1,9 @@
   .container {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   
-  @media screen and (min-width: 320px) {
+  @media (min-width: 320px) {
     .container {
       width: 320px;
       margin-left: auto;
@@ -11,13 +11,13 @@
     }
   }
   
-  @media screen and (min-width: 768px) {
+  @media (min-width: 768px) {
     .container {
       width: 736px;
     }
   }
   
-  @media screen and (min-width: 1158px) {
+  @media (min-width: 1158px) {
     .container {
       width: 1158px;
       margin: 0 auto;
