--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,13 @@
 @import "./base/section.css";
 
 @import "./layout/header.css";
+@import "./layout/mobile-menu.css";
+@import "./layout/main-section.css";
+@import "./layout/section-features.css";
+@import "./layout/team.css";
+@import "./layout/project.css";
+@import "./layout/footer.css";
+@import "./layout/backdrop.css";
 
 @import "./utils/visually-hidden.css";
 @import "./utils/variables.css";
