--- a/css/layout/project.css
+++ b/css/layout/project.css
@@ -12,7 +12,6 @@
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-  padding-top: 72px;
 }
 .project-title {
   font-weight: 500;
@@ -28,10 +27,10 @@
   letter-spacing: 0.02em;
   color: #434455;
 }
-/* .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-} */
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
 
 .project-list {
   display: flex;
@@ -43,10 +42,9 @@
   padding-left: 0;
   margin-bottom: 72px;
 }
-/* .project-item {
-  width: calc((100% - 48px) / 3);
+.project-item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 /* .project-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -101,10 +99,7 @@
     letter-spacing: 0.02em;
     color: #434455;
   }
-  .section {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
+  
   
   .project-list {
     display: flex;
@@ -142,7 +137,7 @@
   }
 }
 
-@media (min-width: 1157px) {
+@media (min-width: 1158px) {
 .porfolio-title {
   font-size: 36px;
   line-height: 1.11;
