--- a/css/layout/backdrop.css
+++ b/css/layout/backdrop.css
@@ -1,3 +1,10 @@
+@media (max-width: 408px) {
+  .modal-window {
+    max-width: 95%;
+  }
+}
+
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -11,7 +18,6 @@
 
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
 }
 
 .modal-window {
@@ -19,7 +25,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px; 
+  width: 408px;
+  
   min-height: 584px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -232,12 +239,11 @@
   height: 100%;
   background-color: rgba(46, 47, 66, 0.40);
   opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+  visibility: visible;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
  .backdrop.is-open {
   opacity: 1;
-  visibility: hidden;
+  visibility: visible;
   pointer-events: auto;
  }
