--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -32,7 +32,9 @@
 
 @media (min-width: 768px) and (max-width: 1157px) {
   .header-wrap-container {
-   
+   /* margin-left: 16px;
+   margin-right: 16px;
+   padding: 0; */
   }
   .logo {
     color: #4d5ae5;
@@ -105,11 +107,12 @@
   }
 
   .link-address {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    font-style: normal;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-size: 16px;
+    font-size: 12px;
     padding: 0;
     display: block;
   }
@@ -144,8 +147,7 @@
   .addres-list {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-    margin-top: 10px;
+    gap: 12px;
   }
   .mobile-menu-open-btn {
     display: none;
@@ -153,6 +155,14 @@
   .mobile-menu {
     display: none;
   }
+
+  .header-contacts {
+    align-self: center;
+  }
+  /* .header-nav {
+    display: flex;
+    align-items: center;
+  } */
 
   
 }
@@ -163,10 +173,7 @@
   
   }
   
-  .header-nav {
-    display: flex;
-    align-items: center;
-  }
+  
   
   
 } */
