--- a/css/layout/main-section.css
+++ b/css/layout/main-section.css
@@ -1,8 +1,7 @@
 
 @media (max-width: 768px) {
 .hero-section {
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 72px 0;
 
 	background-image: linear-gradient(
     to bottom,
@@ -21,14 +20,15 @@
 
 .hero-title {
   color: #ffffff;
-  font-size: 56px;
+  font-size: 36px;
   letter-spacing: 0.02em;
-  line-height: 1.07;
+  line-height: 1.1;
   text-align: center;
   max-width: 496px;
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: 45px;
+  margin-bottom: 72px;
+  text-transform: capitalize;
 }
 
 .hero-button {
@@ -68,8 +68,7 @@
 }
 @media (min-width: 768px) and (max-width: 1157px) {
   .hero-section {
-    padding-top: 188px;
-    padding-bottom: 188px;
+    padding: 72px 0;
   
     background-image: linear-gradient(
       to bottom,
@@ -125,12 +124,23 @@
   .hero-button:focus {
     background-color: #404bbf;
 }
+@media (min-resolution: 192dpi) and (min-width: 768px),
+  (min-resolution: 2dppx) and (min-width: 768px),
+  (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .section-one-color {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../../images/Images-Hero/hero-tablet@2x.jpg);
+  }
+}
 
-@media (min-width: 1157px) {
+@media (min-width: 1158px) {
 
 .hero-section {
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding: 72px 0;
 
 	background-image: linear-gradient(
     to bottom,
@@ -185,4 +195,16 @@
 }
 .hero-button:focus {
   background-color: #404bbf;
+}
+@media (min-resolution: 192dpi) and (min-width: 1158px),
+  (min-resolution: 2dppx) and (min-width: 1158px),
+  (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+  .section-one-color {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../../images/Images-Hero/hero-desktop@2x.jpg);
+  }
 }
