--- a/css/layout/mobile-menu.css
+++ b/css/layout/mobile-menu.css
@@ -28,8 +28,7 @@
   transform: translateX(100%);
   transition: transform 250ms ease-out;
   opacity: 1;
-  visibility: hidden;
-  pointer-events: none;
+  visibility: visible;
   padding-top: 72px;
   padding-right: 24px;
   padding-bottom: 40px;
@@ -48,6 +47,13 @@
   background-color: transparent;
   padding: 0;
   line-height: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(231, 231, 231);
 }
 
 .mobile-menu-social-icon {
@@ -57,7 +63,7 @@
 .mobile-menu-navigation-list {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 24px;
 }
 .mobile-menu-navigation-link {
   font-size: 36px;
@@ -71,8 +77,11 @@
   text-transform: capitalize;
   color: #404bbf; 
 }
+.mobile-menu-navigation {
+  margin-bottom: auto;
+}
 .mobile-menu-contacts-container {
-  margin-top: auto;
+  
 }
 .mobile-menu-mail-link {
   font-size: 20px;
@@ -94,16 +103,15 @@
 .mobile-menu-soc {
   display: flex;
   align-items: center;
-  justify-content: center;
-  /* justify-content: space-between; */
-  margin-top: 48px;
+  
   gap: 40px;
 }
 .mobile-menu-contact-list {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  padding-bottom: 50px;
+  gap: 24px;
+  margin-bottom: 48px;
+  
 }
 
 .mobile-menu-social-list {
