--- a/css/layout/team.css
+++ b/css/layout/team.css
@@ -25,6 +25,10 @@
     color: #2e2f42;
     margin-bottom: 72px;
   }
+  
+  /* .card-item img {
+    max-width: 100%;
+  } */
   .card-item {
     background-color: #ffffff;
     width: 264px;
@@ -32,9 +36,10 @@
     border-top-right-radius: 0px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
-    
+    max-width: 100%;
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    align-self: center;
   }
   .card-title {
     font-weight: 500;
@@ -114,8 +119,8 @@
 @media (min-width: 768px) and (max-width: 1157px) {
   .team {
     background-color: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
   }
   .team-title {
     font-size: 36px;
@@ -156,9 +161,11 @@
 .team-social-list {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 64px;
   padding-left: 0;
-  margin-top: 8px;
+  margin-right: auto;
+  
 }
 
 .team-social-icon {
