--- a/css/layout/backdrop.css
+++ b/css/layout/backdrop.css
@@ -1,31 +1,18 @@
-@media (max-width: 408px) {
+@media (max-width: 320px) {
   .modal-window {
-    max-width: 95%;
+    max-width: 100%;
   }
 }
 
 
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999999;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  opacity: 0;
-  visibility: hidden;
-}
 
 .modal-window {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
+  width: 288px;
   
   min-height: 584px;
   background: #fcfcfc;
@@ -55,7 +42,7 @@
   padding: 0;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  
 }
 
 .modal-close-button:hover, .modal-close-button:focus {
@@ -184,24 +171,24 @@
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.review-form-privacy-link {
-  color: #4d5ae5;
-  text-decoration: underline;
-}
-
-.review-form-checkbox:checked
+  }
+  
+  .review-form-privacy-link {
+    color: #4d5ae5;
+    text-decoration: underline;
+  }
+  
+  .review-form-checkbox:checked
   + .review-form-checkbox-label
   > .review-form-checkbox {
-  background-color: #404bbf;
-  border: none;
+    background-color: #404bbf;
+    border: none;
   fill: #2E2F42;
 }
 
 .review-form-checkbox:focus
-  + .review-form-checkbox-label
-  > .review-form-checkbox {
++ .review-form-checkbox-label
+> .review-form-checkbox {
   outline: 2px solid rgba(0, 0, 255, 0.5);
 }
 
@@ -240,10 +227,17 @@
   background-color: rgba(46, 47, 66, 0.40);
   opacity: 0;
   visibility: visible;
+  pointer-events: none;
+  
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- .backdrop.is-open {
+}
+.backdrop.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
- }
+}
+@media (min-width: 678px) {
+  .modal-window {
+    width: 408px;
+  }
+}
