--- a/css/layout/main-section.css
+++ b/css/layout/main-section.css
@@ -22,13 +22,16 @@
   color: #ffffff;
   font-size: 36px;
   letter-spacing: 0.02em;
-  line-height: 1.1;
+  line-height: 1.11;
   text-align: center;
-  max-width: 496px;
+  max-width: 224px;
+  max-height: 160px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 72px;
   text-transform: capitalize;
+  font-style: normal;
+  font-weight: 700;
 }
 
 .hero-button {
@@ -68,7 +71,7 @@
 }
 @media (min-width: 768px) and (max-width: 1157px) {
   .hero-section {
-    padding: 72px 0;
+    padding: 112px 0;
   
     background-image: linear-gradient(
       to bottom,
@@ -140,7 +143,7 @@
 @media (min-width: 1158px) {
 
 .hero-section {
-  padding: 72px 0;
+  padding: 188px 0;
 
 	background-image: linear-gradient(
     to bottom,
