--- a/css/layout/mobile-menu.css
+++ b/css/layout/mobile-menu.css
@@ -33,6 +33,7 @@
   padding-right: 24px;
   padding-bottom: 40px;
   padding-left: 16px;
+  pointer-events: none;
   }
 
 .mobile-menu.is-open {
@@ -63,7 +64,7 @@
 .mobile-menu-navigation-list {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 40px;
 }
 .mobile-menu-navigation-link {
   font-size: 36px;
@@ -90,6 +91,7 @@
   letter-spacing: 0.02em;
   font-style: normal;
   color: #434455;
+  
 }
 .mobile-menu-tel-link {
   color: #4d5ae5;
@@ -110,7 +112,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-bottom: 48px;
+  
   
 }
 
@@ -133,5 +135,8 @@
   height: 40px;
 }
 .mobile-menu-social-icon {
+}
+.mobile-menu-contact {
+  margin-bottom: 48px;
 }
 }
