--- a/css/layout/team.css
+++ b/css/layout/team.css
@@ -133,11 +133,13 @@
   }
   .card-item {
     background-color: #ffffff;
-    flex-basis: calc((100% - 176px) / 2);
+    flex-basis: calc((100% - 208px) / 2);
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
+    width: 264px;
+    max-width: 100%;
     
     box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -157,12 +159,12 @@
     letter-spacing: 0.02em;
     color: #434455;
     text-align: center;
+    margin-bottom: 8px;
   }
 .team-social-list {
   display: flex;
   justify-content: center;
-  column-gap: 24px;
-  row-gap: 64px;
+  gap: 24px;
   padding-left: 0;
   margin-right: auto;
   
@@ -204,7 +206,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  gap: 64px 24px;
 
   margin: 0;
   padding-left: 0;
