--- a/css/layout/section-features.css
+++ b/css/layout/section-features.css
@@ -11,6 +11,7 @@
     letter-spacing: 0.72px;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 8px;
   }
   .features-list {
     display: flex;
@@ -34,6 +35,7 @@
     line-height: 40px;
     letter-spacing: 0.72px;
     text-transform: capitalize;
+    margin-bottom: 8px;
   }
   .features-list {
     display: flex;
@@ -46,7 +48,7 @@
   .features-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-top: 8px;
+    
   }
   .features-item {
     flex-basis: calc((100% - 24px) / 2);
