--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -40,7 +40,7 @@
   justify-content: center;
   gap: 16px;
   padding: 0;
-  margin: 0;
+  margin-bottom: 76px;
 }
 
 .logo-conteiner {
@@ -57,6 +57,7 @@
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
+  margin-top: 76px;
 }
 
 .footer-social-item {
